--- a/src/scss/components/_shoppingcart.scss
+++ b/src/scss/components/_shoppingcart.scss
@@ -2,8 +2,8 @@
 
 .shoppingCart__container {
     text-align: center;
-    overflow-y: scroll;
-    height: 100vh;
+    //overflow-y: scroll;
+    //height: 100vh;
     .counter__products {
         margin-top: 10px;
     }
@@ -40,9 +40,9 @@
         display: flex;
         flex-direction: column;
         margin-top: 20px;
-        margin-left: 110px;
-        padding: 1rem;
-        max-width: 280px;
+        //margin-left: 110px;
+        //padding: 1rem;
+        //max-width: 280px;
         
         .item__container {
             display: flex;
