--- a/src/scss/layout/_menu.scss
+++ b/src/scss/layout/_menu.scss
@@ -47,25 +47,25 @@
 
 
 .menuModal__container {
-   position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+   @include position(fixed);
+   @include flex(column, flex-end);
+    
     background-color: #DDB892;
     @include moveElement (0px, 40px);
 
     .menuModal_content {
         background-color: $secondary-color;
-        min-width: 40vw;
+        min-width: 50vw;
         height: 100vh;
         padding: 1.5rem;
     }
 
     .close_menuModal {
+        @include moveElement (8px, 0px);
         background-color: transparent;
-            border: none;
-            margin-top: 1.5rem;
-            color: $terciary-dark-color;
+        border: none;
+        margin-top: 1.5rem;
+        color: $terciary-dark-color;
             cursor: pointer;
             &:hover {
                     color: red;
