--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -33,10 +33,8 @@
      }
 
      .cartModal__container {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+        @include position(absolute);
+        @include flex(column, flex-end);
         margin-top: 20px;
         height: 100vh;
         overflow: scroll;
@@ -44,16 +42,14 @@
     }
 
     .heartModal__container {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-top: 20px;
-    margin-right: -20px;
-    height: 100vh;
-    overflow: scroll;
-    overscroll-behavior: contain;
-}
+        @include position(absolute);
+        @include flex(column, flex-end);
+        margin-top: 20px;
+        margin-right: -20px;
+        height: 100vh;
+        overflow: scroll;
+        overscroll-behavior: contain;
+    }
 
     }
 
@@ -107,47 +103,42 @@
     }
 
     .cartModal__container {
-        width: 0vw;
-        transform: translate(0px, 0px);
-
+        @include position(absolute);
+        
+        @include moveElement(1px, 60px);
+        height: 100vh;
+        width: 100%;
         .cartModal_content {
             background-color: $secondary-color;
-            min-width: 40vw;
-            overflow: scroll;
-            overscroll-behavior: contain;
-            padding: 1.5rem;
-            font-size: 12px;
-            @include flex(column, center);
-
-        .shoppingCart__container {
-            .buy_over__container {
-                display: flex;
-                flex-direction: row;
-                justify-content: flex-end;
-                margin-right: 20px;
-                .buy_over__button {
-                    button {
-                        font-size: 12px;
-                    }
-                    
-                }
+            font-size: small;
+            margin-top: 20px;
+             @include moveElement(1px, 24px);
+            
+        }
+        
+    .shoppingCart__container {
+        height: 100vh;
+        width: 268px;
+        @include moveElement (-20px, 20px);
+        .shoppingCart__content {
+            
+            .item__container {
+                width: 260px;
+                
             }
-
-            h3 {
-                font-size: small;
-                text-align: right;
-                margin-right: 20px;
+            .counter__container {
+                width: 260px;
+                @include flex(row, space-between);
             }
-            .shoppingCart__content {
-                width: 140px;
-                height: 140px;
+            .close_cartModal {
+                @include moveElement (-20px, 20px);
             }
-            .total__amount {
-                display: flex;
-                justify-content: flex-end;
-                b{
-                    margin-right: 24px;
-                }
+            b {
+                @include flex(row, center);
+                text-align: center;
+            }
+            hr {
+                width: 260px;
             }
             
         }
@@ -188,14 +179,44 @@
     }
 
     .cartModal__container {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-top: 20px;
+        @include position(fixed);
+        background-color: transparent;
+        @include moveElement(-50px, -20px);
         height: 100vh;
-        overflow: scroll;
-        overscroll-behavior: contain;
+
+        .cartModal_content {
+            background-color: $secondary-color;
+            font-size: small;
+            margin-top: 20px;
+            margin-left: 60px;
+        }
+        
+    .shoppingCart__container {
+        height: 100vh;
+
+        .shoppingCart__content {
+            
+            .item__container {
+                width: 150px;
+                
+            }
+            .counter__container {
+                width: 150px;
+                @include flex(row, space-between);
+                margin: 0;
+                padding: 0;
+            }
+            b {
+                @include flex(row, center);
+                text-align: center;
+                width: 100%;
+            }
+            hr {
+                width: 150px;
+            }
+            
+        }
+    }
     }
 
 }
@@ -229,10 +250,10 @@
         display: flex;
         flex-direction: column;
         min-width: 40vw;
-        @include moveElement(400px, 0px);
+        //@include moveElement(400px, 0px);
         .heartModal__content {
             background-color: $secondary-color;
-            overflow: scroll;
+            //overflow: scroll;
             overscroll-behavior: contain;
             padding: 1.5rem;
             font-size: medium;
@@ -254,7 +275,43 @@
     }
 
     .cartModal__container {
-        transform: translate(-140px, 0px);
+        @include position(fixed);
+        background-color: transparent;
+        @include moveElement(-50px, -40px);
+        height: 100vh;
+
+        .cartModal_content {
+            background-color: $secondary-color;
+            font-size: small;
+            margin-top: 20px;
+        }
+        
+    .shoppingCart__container {
+        height: 100vh;
+
+        .shoppingCart__content {
+            
+            .item__container {
+                width: 200px;
+                
+            }
+            .counter__container {
+                width: 200px;
+                @include flex(row, space-between);
+                margin: 0;
+                padding: 0;
+            }
+            b {
+                @include flex(row, center);
+                text-align: center;
+                width: 100%;
+            }
+            hr {
+                width: 200px;
+            }
+            
+        }
+    }
     }
 
 }
@@ -292,9 +349,6 @@
         height: auto;
     }
 
-    .menu-nav__search {
-        @include moveElement(-45px, -8px);
-    }
 
     .home-btn__container-alta {
         margin-top: 30rem;
@@ -302,75 +356,42 @@
 
     .cartModal__container {
         @include position(fixed);
-        display: flex;
-        flex-direction: column;
-        transform: translate(-140px, 0px);
+        background-color: transparent;
+        @include moveElement(-220px, -40px);
+        height: 100vh;
+
         .cartModal_content {
             background-color: $secondary-color;
-            overflow: scroll;
-            overscroll-behavior: contain;
-            padding: 1.5rem;
-            font-size: medium;
-            width: 300px;
-        }
-        .close_cartModal {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            @include moveElement(-245px, 0px);
-        }
-    }
-
-    .cartModal__container {
-        .cartModal_content {
-            .shoppingCart__container {
-            
-                .shoppingCart__content {
-                width: 400px;
-                }
-                .total__amount {
-                display: flex;
-                justify-content: center;
-                text-align: left;
-                }
-                .buy_over__button {
-                    display: flex;
-                        flex-direction: row;
-                        justify-content: flex-start;
-                        @include moveElement(-224px, 0px);
-                }
-            } 
-        } 
-
-    } 
-
-    .shoppingCart__container {
-        width: 500px;
-        display: flex;
-        flex-direction: column;
-        h3{
-            display: flex;
-            margin-left: 60px;
+            font-size: small;
             margin-top: 20px;
         }
+        
+    .shoppingCart__container {
+        height: 100vh;
+
         .shoppingCart__content {
+            
             .item__container {
-                width: 300px;
+                width: 250px;
+                
             }
             .counter__container {
-                width: 300px;
+                width: 250px;
                 @include flex(row, space-between);
+                margin: 0;
+                padding: 0;
             }
             b {
                 @include flex(row, center);
                 text-align: center;
-                width: 300px;
+                width: 100%;
             }
             hr {
-                width: 300px;
+                width: 250px;
             }
             
         }
+    }
     }
 
     .heartModal__container {
@@ -378,7 +399,7 @@
         display: flex;
         flex-direction: column;
         min-width: 40vw;
-        @include moveElement(500px, 0px);
+        //@include moveElement(500px, 0px);
         .heartModal__content {
             background-color: $secondary-color;
             overflow: scroll;
@@ -402,6 +423,15 @@
         font-size: 12px;
         width: 100%;
     }
+
+    .menuModal__container {
+        .close_menuModal {
+            margin-left: 20px;
+        }
+    }
+    
+    
+
 }
 
 @include media-xl {
@@ -440,64 +470,25 @@
         height: auto;
     }
 
+
 .cartModal__container {
         @include position(fixed);
-        display: flex;
-        flex-direction: column;
-        width: 600px;
-        @include moveElement(550px, 0px);
+        background-color: transparent;
+        @include moveElement(700px, 0px);
+
         .cartModal_content {
             background-color: $secondary-color;
-            overflow: scroll;
-            overscroll-behavior: contain;
-            padding: 1.5rem;
-            font-size: medium;
-            width: 400px;
-            @include moveElement(20px, 0px);
+            font-size: large;
         }
-        .close_cartModal {
-            display: flex;
-            flex-direction: row;
-            justify-content: flex-start;
-            @include moveElement(-245px, 0px);
-        }
-    }
-
-    .cartModal__container {
-        .cartModal_content {
-            .shoppingCart__container {
-            
-                .shoppingCart__content {
-                width: 400px;
-                }
-                .total__amount {
-                display: flex;
-                justify-content: center;
-                text-align: left;
-                }
-                .buy_over__button {
-                    display: flex;
-                        flex-direction: row;
-                        justify-content: flex-start;
-                        @include moveElement(-224px, 0px);
-                }
-            } 
-        } 
-
-    } 
-
+        
     .shoppingCart__container {
-        width: 600px;
-        display: flex;
-        flex-direction: column;
-        h3{
-            display: flex;
-            margin-left: 60px;
-            margin-top: 20px;
-        }
+       
+        height: 100vh;
+
         .shoppingCart__content {
+            
             .item__container {
-                width: 300px;
+                width: 380px;
             }
             .counter__container {
                 width: 400px;
@@ -506,13 +497,60 @@
             b {
                 @include flex(row, center);
                 text-align: center;
-                width: 400px;
+                width: 100%;
             }
             hr {
                 width: 400px;
             }
             
         }
+    }
+    }
+
+}
+
+@include media-xxl {
+
+    .cartModal__container {
+        @include position(fixed);
+        background-color: transparent;
+        @include moveElement(1024px, 0px);
+
+        .cartModal_content {
+            background-color: $secondary-color;
+            font-size: large;
+        }
+        .close_cartModal {
+            
+        }
+
+        
+
+    .shoppingCart__container {
+        width: 90%;
+        height: 100vh;
+
+        .shoppingCart__content {
+            padding: 20px;
+            margin-left: 90px;
+            .item__container {
+                width: 1100px;
+            }
+            .counter__container {
+                width: 1100px;
+                @include flex(row, space-between);
+            }
+            b {
+                @include flex(row, center);
+                text-align: center;
+                width: 100%;
+            }
+            hr {
+                width: 1000px;
+            }
+            
+        }
+    }
     }
 
     .heartModal__container {
@@ -523,8 +561,6 @@
         @include moveElement(1200px, 0px);
         .heartModal__content {
             background-color: $secondary-color;
-            overflow: scroll;
-            overscroll-behavior: contain;
             padding: 1.5rem;
             font-size: medium;
             min-width: 40vw;
@@ -532,15 +568,18 @@
     }
 
     .favorites__container {
-        width: 600px;
+        width: 900px;
         margin: 40px;
         @include moveElement(50px, 0px);
         .favorites__content {
             margin-bottom: 20px;
             @include moveElement(110px, 0px);
             .item__container {
-                width: 400px;
+                width: 600px;
                 @include flex(row, space-between);
+            }
+            hr {
+                width: 600px;
             }
         }
     }
