--- a/src/scss/components/_cartmodal.scss
+++ b/src/scss/components/_cartmodal.scss
@@ -4,19 +4,37 @@
 
 .cartModal__container {
     @include position(fixed);
-    @include flex(column, flex-end);
-    margin-top: 20px;
-    height: 100vh;
+    @include flex(column, flex-start);
+    margin-top: 40px;
     min-width: 60vw;
-
+    
 
     .cartModal_content {
         background-color: $secondary-color;
-        min-width: 40vw;
+        height: 100vh;
+        width: 60vw;
+    }
+
+    .shoppingCart__container {
+        text-align: center;
+        font-size: 12px;
+        padding: 10px;
+        overflow-y: auto;
+        max-height: 400px;
+    }
+
+    .title-and-closemoda__container {
+        display: inline-flex;
+        flex-direction: row;
+        align-content: space-between;
+        justify-content: space-between;
+        align-items: flex-end;
+        gap: 20px;
+        font-size: 12px;
+        margin-left: 10px;
     }
 
     .close_cartModal {
-        @include moveElement (-80px, 20px);
         background-color: transparent;
             border: none;
             margin-top: 1.5rem;
