--- a/src/scss/components/_favorites.scss
+++ b/src/scss/components/_favorites.scss
@@ -1,7 +1,9 @@
 .favorites__container {
     text-align: center;
+    max-height: 600px;
     overflow-y: scroll;
-    height: 100vh;
+   
+
     .counter__products {
         margin-top: 10px;
     }
@@ -15,6 +17,7 @@
         display: flex;
         flex-direction: column;
         max-width: 280px;
+        margin: 10px;
         
         .item__container {
             display: flex;
