--- a/src/scss/components/_heartModal.scss
+++ b/src/scss/components/_heartModal.scss
@@ -3,23 +3,28 @@
 @use '../utils/variables' as *;
 
 .heartModal__container {
-    @include position(fixed);
-    @include flex(column, flex-end);
-    margin-top: 20px;
-    margin-right: -20px;
-    height: 100vh;
-    min-width: 60vw;
-    overflow: scroll;
-    overscroll-behavior: contain;
+   @include position(fixed);
+    @include flex(column, flex-start);
+    margin-top: 40px;
+    width: 60vw;
 
     .heartModal_content {
         background-color: $secondary-color;
-        min-width: 60vw;
-        overflow: scroll;
-        overscroll-behavior: contain;
-        padding: 1.5rem;
+        height: 100vh;
+        width: 60vw;
     }
 
+
+    .title-and-closemoda__container {
+         display: inline-flex;
+        flex-direction: row;
+        align-content: space-between;
+        justify-content: space-between;
+        align-items: flex-end;
+        gap: 20px;
+        font-size: 12px;
+        margin-left: 10px;
+    }
     .close_cartModal {
         background-color: transparent;
             border: none;
