--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -62,7 +62,7 @@
 }
 
 @mixin media-md {
-    @media screen and (min-width: 680px) {
+    @media screen and (min-width: 768px) {
         @content;
     }
 }
@@ -74,13 +74,19 @@
 }
 
 @mixin media-xl {
-    @media screen and (min-width: 1200px) {
+    @media screen and (min-width: 1440px) {
         @content;
     }
 }
 
 @mixin media-xxl {
-    @media screen and (min-width: 2500px) {
+    @media screen and (min-width: 2560px) {
+        @content;
+    }
+}
+
+@mixin media-xxxl {
+    @media screen and (min-width: 2880px) {
         @content;
     }
 }
