--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,11 +12,11 @@
 @use "./components/cards.scss";
 @use "./components/form.scss";
 @use "./components/cartmodal.scss";
+@use "./components/heartmodal";
 @use "./components/shoppingcart.scss";
 @use "./components/checkout.scss";
 @use "./components/favorites.scss";
 @use "./components/counter.scss";
-@use "./components/heartmodal.scss";
 
 
 @use "./pages/aboutus.scss";
