--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,7 +12,7 @@
 @use "./components/cards.scss";
 @use "./components/form.scss";
 @use "./components/cartmodal.scss";
-@use "./components/heartmodal";
+@use "./components/favoritesmodal.scss";
 @use "./components/shoppingcart.scss";
 @use "./components/checkout.scss";
 @use "./components/favorites.scss";
