corrigiendo scss de cart para 1024 y 2880 px

--- a/src/scss/layout/_responsive.scss
+++ b/src/scss/layout/_responsive.scss
@@ -290,7 +290,7 @@
     .cartModal__container {
         .cartModal_content {
             .shoppingCart__container {
-                max-height: 600px;
+                max-height: 420px;
             }
         }
         
@@ -368,7 +368,9 @@
     .cartModal__container {
         .cartModal_content {
             .shoppingCart__container {
-                max-height: 500px;
+                max-height: 950px;
+                margin-right: 200px;
+                margin-left: 50px;
             }
         }
         
